[gd_scene load_steps=10 format=3 uid="uid://cqy30f0n0l5in"]

[ext_resource type="Script" path="res://credits_menu.gd" id="1_6tujf"]
[ext_resource type="Texture2D" uid="uid://c76luyx5ldkts" path="res://art/mainmenu.webp" id="2_nic3x"]
[ext_resource type="Texture2D" uid="uid://crbut6lhjj0up" path="res://art/backarrow.png" id="3_ewydw"]
[ext_resource type="FontFile" uid="uid://bk6sax2jfn10n" path="res://font/grotesque/Grotesque Bourgeoisie.ttf" id="3_tswqe"]
[ext_resource type="FontFile" uid="uid://demx0aaebdrhf" path="res://font/cookie/Cookie-Regular.ttf" id="4_2mgvv"]

[sub_resource type="Gradient" id="Gradient_88x11"]
colors = PackedColorArray(1, 0.14902, 1, 1, 1, 0.584314, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_k72di"]
gradient = SubResource("Gradient_88x11")

[sub_resource type="Gradient" id="Gradient_gapkn"]
offsets = PackedFloat32Array(0, 0.425806, 0.754839, 0.974194, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rxa3r"]
gradient = SubResource("Gradient_gapkn")
width = 1801

[node name="CreditsMenu" type="Node"]
script = ExtResource("1_6tujf")

[node name="CreditsScreen" type="Node2D" parent="."]

[node name="BackGround" type="TextureRect" parent="CreditsScreen"]
offset_right = 1792.0
offset_bottom = 1024.0
scale = Vector2(0.648153, 0.639121)
texture = ExtResource("2_nic3x")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="CreditsScreen"]
offset_left = 224.0
offset_top = 117.0
offset_right = 480.0
offset_bottom = 157.0
scale = Vector2(2.66548, 12.9371)
texture = SubResource("GradientTexture1D_k72di")

[node name="CreditsTitleText" type="RichTextLabel" parent="CreditsScreen"]
offset_left = 384.0
offset_top = 148.0
offset_right = 784.0
offset_bottom = 248.0
theme_override_fonts/normal_font = ExtResource("3_tswqe")
theme_override_font_sizes/normal_font_size = 66
bbcode_enabled = true
text = "[center]CREDITS[/center]"

[node name="CreditsNames" type="RichTextLabel" parent="CreditsScreen"]
offset_left = 274.0
offset_top = 240.0
offset_right = 874.0
offset_bottom = 440.0
theme_override_fonts/normal_font = ExtResource("4_2mgvv")
theme_override_font_sizes/normal_font_size = 50
text = "Programming ------------- Niwatori401
Character Art --------------------Bloopy"

[node name="OtherAcknowledgements" type="RichTextLabel" parent="CreditsScreen"]
offset_left = 226.0
offset_top = 553.0
offset_right = 1026.0
offset_bottom = 753.0
theme_override_fonts/normal_font = ExtResource("4_2mgvv")
theme_override_font_sizes/normal_font_size = 30
text = "\"Canon in D for Two Harps\" by Kevin MacLeod (incompetech.com)
Other art/sound assets from public domain sources"

[node name="BackButton" type="TextureButton" parent="CreditsScreen"]
offset_left = 52.0
offset_top = 33.0
offset_right = 308.0
offset_bottom = 289.0
scale = Vector2(0.307464, 0.307464)
texture_normal = ExtResource("3_ewydw")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="DarkScreen" type="TextureRect" parent="CreditsScreen"]
visible = false
offset_right = 1801.0
offset_bottom = 1024.0
scale = Vector2(0.648153, 0.639121)
mouse_filter = 2
texture = SubResource("GradientTexture1D_rxa3r")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CreditsScreen/BackButton" to="." method="_on_back_button_pressed"]
